@@ -48,10 +48,13 @@
     <Compile Include="Bindings\WindowsContextLoad.cs" />
     <Compile Include="Bindings\WindowsVistaContextLoad.cs" />
     <Compile Include="Bindings\X11ContextLoad.cs" />
+    <Compile Include="Contexts\WindowsBaseContext.cs" />
+    <Compile Include="Contexts\WindowsVistaContext.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Glu.cs" />
     <Compile Include="Contexts\GLContext.cs" />
     <Compile Include="Contexts\WindowsContext.cs" />
-    <Compile Include="Contexts\WindowsVistaContext.cs" />
     <Compile Include="Contexts\X11Context.cs" />
     <Compile Include="Glx.cs" />
     <Compile Include="Wgl.cs" />
